--- a/source/form.html
+++ b/source/form.html
@@ -7,48 +7,61 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page__body">
-    <header class="page-header">
-      <a class="page-header__logo" href="index.html">
+    <header class="page-header container-100">
+      <a class="page-header__logo">
         <img src="https://via.placeholder.com/86x35" width="86" height="35" alt="Интернет-магазин «Мишка»">
       </a>
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item">
-              <a href="catalog.html">
-                Каталог товаров
-              </a>
-            </li>
-            <li class="site-list__item">
-              <a href="form.html">
-                Вязание на заказ
-              </a>
-            </li>
-          </ul>
-          <ul class="main-nav__list user-list">
-            <li class="user-list__item">
-              <a href="search.html">
-                <svg class="user-list__login-icon" width="18" height="18">
-                  <use xlink:href="img/sprite.svg#icon-search"></use>
-                </svg>
-                Поиск по сайту
-              </a>
-            </li>
-            <li class="user-list__item">
-              <a href="cart.html">
-                <svg class="user-list__login-icon" width="21" height="18">
-                  <use xlink:href="img/sprite.svg#icon-cart"></use>
-                </svg>
-                Корзина: пока пуста
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <p class="page-header__slogan visually-hidden">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a href="catalog.html">
+              Каталог товаров
+            </a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html">
+              Вязание на заказ
+            </a>
+          </li>
+        </ul>
+        <ul class="main-nav__list user-list">
+          <li class="user-list__item">
+            <a href="search.html">
+              <svg class="user-list__login-icon" width="18" height="18">
+                <use xlink:href="img/sprite.svg#icon-search"></use>
+              </svg>
+              Поиск&nbsp;по&nbsp;сайту
+            </a>
+          </li>
+          <li class="user-list__item">
+            <a href="cart.html">
+              <svg class="user-list__login-icon" width="21" height="18">
+                <use xlink:href="img/sprite.svg#icon-cart"></use>
+              </svg>
+              Корзина:&nbsp;пока&nbsp;пуста
+            </a>
+          </li>
+        </ul>
+        <ul class="main-nav__list special-list">
+          <li class="site-list__item">
+            <a href="#">
+              Новые поступления
+            </a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">
+              Распродажа
+            </a>
+          </li>
+        </ul>
+      </div>
+      <p class="page-header__slogan">
         Бесплатная доставка по России
       </p>
+    </nav>
     </header>
     <main class="page-main">
       <div class="page-main__wrapper">
@@ -58,7 +71,7 @@
       </div>
       <section class="slogan-form">
         <h2 class="visually-hidden">Слоган</h2>
-        <div class="slogan-form__wrapper">
+        <div class="slogan-form__wrapper container">
           <p class="slogan-form__text">
             Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
           </p>
@@ -66,110 +79,122 @@
       </section>
       <section class="main-form">
         <h2 class="visually-hidden">Форма заказа</h2>
-        <div class="main-form__wrapper">
+        <div class="main-form__wrapper container-100">
           <form class="form" action="https://echo.htmlacademy.ru" method="post">
             <fieldset class="form__fieldset">
-              <legend class="form__legend">
-                Тип
-              </legend>
-              <ul class="form__list">
-                <li class="radio form__item">
-                  <input class="visually-hidden radio__input" id="type-accessory" type="radio" name="product-type" value="accessory" checked="">
-                  <label class="radio__label" for="type-accessory">Аксессуар для интерьера</label>
-                </li>
-                <li class="radio form__item">
-                  <input class="visually-hidden radio__input" id="type-toy" type="radio" name="product-type" value="toy">
-                  <label class="radio__label" for="type-toy">Детская игрушка</label>
-                </li>
-              </ul>
+              <div class="form__wrapper form__wrapper--radio">
+                <legend class="form__legend">
+                  Тип
+                </legend>
+                <ul class="form__list">
+                  <li class="radio form__item">
+                    <input class="visually-hidden radio__input" id="type-accessory" type="radio" name="product-type" value="accessory" checked="">
+                    <label class="radio__label" for="type-accessory">Аксессуар для интерьера</label>
+                  </li>
+                  <li class="radio form__item">
+                    <input class="visually-hidden radio__input" id="type-toy" type="radio" name="product-type" value="toy">
+                    <label class="radio__label" for="type-toy">Детская игрушка</label>
+                  </li>
+                </ul>
+              </div>
+            </fieldset>
+            <fieldset class="form__fieldset form__fieldset--dark">
+              <div class="form__wrapper">
+                <legend class="form__legend">
+                  Цвет
+                </legend>
+                <ul class="form__list form__list--checkbox">
+                  <li class="checkbox form__item">
+                    <input class="visually-hidden checkbox__input" id="color-white" type="checkbox" name="product-color-white" checked="">
+                    <label class="checkbox__label" for="color-white">Белый</label>
+                  </li>
+                  <li class="checkbox form__item">
+                    <input class="visually-hidden checkbox__input" id="color-grey" type="checkbox" name="product-color-grey" checked="">
+                    <label class="checkbox__label" for="color-grey">Серый</label>
+                  </li>
+                  <li class="checkbox form__item">
+                    <input class="visually-hidden checkbox__input" id="color-tiffany" type="checkbox" name="product-color-tiffany">
+                    <label class="checkbox__label" for="color-tiffany">«Тиффани»</label>
+                  </li>
+                  <li class="checkbox form__item">
+                    <input class="visually-hidden checkbox__input" id="color-black" type="checkbox" name="product-color-black">
+                    <label class="checkbox__label" for="color-black">Черный</label>
+                  </li>
+                  <li class="checkbox form__item">
+                    <input class="visually-hidden checkbox__input" id="color-rose" type="checkbox" name="product-color-rose">
+                    <label class="checkbox__label" for="color-rose">Розовый</label>
+                  </li>
+                  <li class="checkbox form__item">
+                    <input class="visually-hidden checkbox__input" id="color-orange" type="checkbox" name="product-color-orange">
+                    <label class="checkbox__label" for="color-orange">Оранжевый</label>
+                  </li>
+                </ul>
+              </div>
             </fieldset>
             <fieldset class="form__fieldset">
-              <legend class="form__legend">
-                Цвет
-              </legend>
-              <ul class="form__list">
-                <li class="checkbox form__item">
-                  <input class="visually-hidden checkbox__input" id="color-white" type="checkbox" name="product-color-white" checked="">
-                  <label class="checkbox__label" for="color-white">Белый</label>
-                </li>
-                <li class="checkbox form__item">
-                  <input class="visually-hidden checkbox__input" id="color-grey" type="checkbox" name="product-color-grey" checked="">
-                  <label class="checkbox__label" for="color-grey">Серый</label>
-                </li>
-                <li class="checkbox form__item">
-                  <input class="visually-hidden checkbox__input" id="color-tiffany" type="checkbox" name="product-color-tiffany">
-                  <label class="checkbox__label" for="color-tiffany">«Тиффани»</label>
-                </li>
-                <li class="checkbox form__item">
-                  <input class="visually-hidden checkbox__input" id="color-black" type="checkbox" name="product-color-black">
-                  <label class="checkbox__label" for="color-black">Черный</label>
-                </li>
-                <li class="checkbox form__item">
-                  <input class="visually-hidden checkbox__input" id="color-rose" type="checkbox" name="product-color-rose">
-                  <label class="checkbox__label" for="color-rose">Розовый</label>
-                </li>
-                <li class="checkbox form__item">
-                  <input class="visually-hidden checkbox__input" id="color-orange" type="checkbox" name="product-color-orange">
-                  <label class="checkbox__label" for="color-orange">Оранжевый</label>
-                </li>
-              </ul>
+              <div class="form__wrapper">
+                <legend class="form__legend">
+                  ФИО
+                </legend>
+                <ul class="form__list">
+                  <li class="form__list-item">
+                    <label class="form__label" for="fio-name">Имя:</label>
+                    <input class="form__input form__input--fio" id="fio-name" type="text" name="fio-name" placeholder="Введите ваше имя*">
+                  </li>
+                  <li class="form__list-item">
+                    <label class="form__label" for="fio-surname">Фамилия:</label>
+                    <input class="form__input form__input--fio" id="fio-surname" type="text" name="fio-surname" placeholder="Укажите фамилию*">
+                  </li>
+                  <li class="form__list-item">
+                    <label class="form__label" for="fio-patronymic">Отчество:</label>
+                    <input class="form__input form__input--fio" id="fio-patronymic" type="text" name="fio-patronymic" placeholder="Отчество, если желаете">
+                  </li>
+                </ul>
+              </div>
             </fieldset>
-            <fieldset class="form__fieldset">
-              <legend class="form__legend">
-                ФИО
-              </legend>
-              <ul class="form__list">
-                <li class="form__list-item">
-                  <label class="form__label" for="fio-name">Имя:</label>
-                  <input class="form__input" id="fio-name" type="text" name="fio-name" placeholder="Введите ваше имя*">
-                </li>
-                <li class="form__list-item">
-                  <label class="form__label" for="fio-surname">Фамилия:</label>
-                  <input class="form__input" id="fio-surname" type="text" name="fio-surname" placeholder="Укажите фамилию*">
-                </li>
-                <li class="form__list-item">
-                  <label class="form__label" for="fio-patronymic">Отчество:</label>
-                  <input class="form__input" id="fio-patronymic" type="text" name="fio-patronymic" placeholder="Отчество, если желаете">
-                </li>
-              </ul>
-            </fieldset>
-            <fieldset class="form__fieldset form__fieldset--contacts">
-              <legend class="form__legend visually-hidden">
-                Контакты
-              </legend>
-              <ul class="form__list">
-                <li class="form__item">
-                  <label class="form__label form__label--contacts" for="user-telephone">Тел</label>
-                  <input class="form__input" type="tel" id="user-telephone" name="user-telephone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
-                </li>
-                <li class="form__item">
-                  <label class="form__label form__label--contacts" for="user-email">E-mail</label>
-                  <input class="form__input" type="email" id="user-email" name="user-email" placeholder="Ваш Email*">
-                </li>
-              </ul>
+            <fieldset class="form__fieldset form__fieldset--dark">
+              <div class="form__wrapper form__wrapper--contacts">
+                <legend class="form__legend visually-hidden">
+                  Контакты
+                </legend>
+                <ul class="form__list">
+                  <li class="form__item form__item--contacts">
+                    <label class="form__label form__label--contacts" for="user-telephone">Тел</label>
+                    <input class="form__input form__input--contacts" type="tel" id="user-telephone" name="user-telephone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
+                  </li>
+                  <li class="form__item form__item--contacts">
+                    <label class="form__label form__label--contacts" for="user-email">E-mail</label>
+                    <input class="form__input form__input--contacts" type="email" id="user-email" name="user-email" placeholder="Ваш Email*">
+                  </li>
+                </ul>
+              </div>
             </fieldset>
             <fieldset class="form__fieldset form__fieldset--more">
-              <legend class="form__legend visually-hidden">
-                Ваши дополнения
-              </legend>
-              <label class="form__label form__label--contacts" for="user-text">Доп</label>
-              <textarea class="form__textarea" id="user-text" name="more-info" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+              <div class="form__wrapper">
+                <legend class="form__legend visually-hidden">
+                  Ваши дополнения
+                </legend>
+                <label class="form__label form__label--contacts" for="user-text">Доп</label>
+                <textarea class="form__textarea" id="user-text" name="more-info" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+              </div>
             </fieldset>
-            <p class="form__note">
-              *Поля обязательны для заполнения
-            </p>
-            <button class="form__button button" type="button">
-              отправить заказ
-            </button>
+              <div class="form__wrapper form__wrapper--button">
+                <p class="form__note">
+                  *Поля обязательны для заполнения
+                </p>
+                <button class="form__button button" type="button">
+                  отправить заказ
+                </button>
+              </div>
           </form>
         </div>
       </section>
     </main>
     <footer class="page-footer">
-      <div class="page-footer__wrapper">
-        <img class="logo-footer visually-hidden" src="https://via.placeholder.com/102x34" width="102" height="34" alt="">
+      <div class="page-footer__wrapper container">
+        <img class="page-footer__logo" src="https://via.placeholder.com/102x34" width="102" height="34">
         <div class="page-footer__social social">
-          <b class="social__title">Давайте дружить!</b>
+          <b class="social__title visually-hidden">Давайте дружить!</b>
           <ul class="social__list">
             <li class="social__item">
               <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
