--- a/source/index.html
+++ b/source/index.html
@@ -8,10 +8,12 @@
   </head>
   <body class="page__body">
     <header class="page-header container-100">
-      <a class="page-header__logo">
-        <img src="https://via.placeholder.com/86x35" width="86" height="35" alt="Интернет-магазин «Мишка»">
-      </a>
-      <nav class="main-nav">
+      <div class="page-header__container">
+        <a class="page-header__logo">
+          <img src="img/mishka-logo-mobile.svg" width="86" height="35" alt="Интернет-магазин «Мишка»">
+        </a>
+      </div>
+      <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
@@ -28,30 +30,30 @@
           </li>
         </ul>
         <ul class="main-nav__list user-list">
-          <li class="user-list__item">
-            <a href="search.html">
-              <svg class="user-list__login-icon" width="18" height="18">
-                <use xlink:href="img/sprite.svg#icon-search"></use>
+          <li class="user-list__item user-list__item--search">
+            <a class="user-list__item-link" href="search.html">
+              <svg class="user-list__icon-search" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path opacity="0.2" d="M17.6932 16.0568L14.2159 12.5795C15.2386 11.25 15.75 9.61364 15.75 7.875C15.75 3.47727 12.2727 0 7.875 0C3.47727 0 0 3.47727 0 7.875C0 12.2727 3.47727 15.75 7.875 15.75C9.61364 15.75 11.25 15.1364 12.5795 14.2159L16.0568 17.6932C16.2614 17.8977 16.4659 18 16.875 18C17.4886 18 18 17.4886 18 16.875C18 16.6705 17.8977 16.3636 17.6932 16.0568ZM2.25 7.875C2.25 4.80682 4.80682 2.25 7.875 2.25C10.9432 2.25 13.5 4.80682 13.5 7.875C13.5 10.9432 10.9432 13.5 7.875 13.5C4.80682 13.5 2.25 10.9432 2.25 7.875Z" fill="black"/>
               </svg>
-              Поиск&nbsp;по&nbsp;сайту
+              <span class="user-list__item-search">Поиск&nbsp;по&nbsp;сайту</span>
             </a>
           </li>
-          <li class="user-list__item">
-            <a href="cart.html">
-              <svg class="user-list__login-icon" width="21" height="18">
-                <use xlink:href="img/sprite.svg#icon-cart"></use>
+          <li class="user-list__item user-list__item--cart">
+            <a class="user-list__item-link" href="cart.html">
+              <svg class="user-list__icon-cart" width="21" height="18" viewBox="0 0 21 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path opacity="0.2" d="M20.1884 6.85716H16.6377L13.1884 0.380944C12.9855 -8.61287e-06 12.5797 -0.0952351 12.1739 0.0952412C11.7681 0.285717 11.6667 0.66667 11.8696 1.04762L15.0145 6.85716H5.7826L8.92753 1.04762C9.13043 0.66667 8.92754 0.285717 8.6232 0.0952412C8.2174 -0.0952351 7.8116 0.0952295 7.6087 0.380944L4.1594 6.85716H0.811583C0.405785 6.85716 0 7.14286 0 7.61905C0 8 0.304336 8.38094 0.811583 8.38094H1.01449L1.92753 11.2381C1.72463 11.3333 1.62317 11.5238 1.62317 11.8095C1.62317 12.1905 1.92753 12.4762 2.33332 12.4762L4.05797 18H16.942L18.6667 12.4762C19.0725 12.4762 19.3768 12.1905 19.3768 11.8095C19.3768 11.619 19.2754 11.3333 19.0725 11.2381L19.9855 8.38094H20.1884C20.5942 8.38094 21 8.09524 21 7.61905C21 7.14286 20.5942 6.85716 20.1884 6.85716ZM15.6232 16.4762H5.07247L3.85506 12.381H16.942L15.6232 16.4762ZM17.2464 10.9524H3.34782L2.53623 8.28573H18.058L17.2464 10.9524Z" fill="black"/>
               </svg>
-              Корзина:&nbsp;пока&nbsp;пуста
+              <span class="user-list__item-cart">Корзина:&nbsp;пока&nbsp;пуста</span>
             </a>
           </li>
         </ul>
         <ul class="main-nav__list special-list">
-          <li class="site-list__item">
+          <li class="special-list__item">
             <a href="#">
               Новые поступления
             </a>
           </li>
-          <li class="site-list__item">
+          <li class="special-list__item">
             <a href="#">
               Распродажа
             </a>
@@ -74,16 +76,33 @@
       </section>
       <section class="sections-nav">
         <h2 class="visually-hidden">Основные разделы</h2>
-        <div class="sections-nav__wrapper container">
+        <div class="sections-nav__wrapper">
           <ul class="sections-nav__list">
             <li class="sections-nav__item sections-nav__item-left">
-              <a href="interior.html">
-                Предметы<br> интерьера
+              <a class="sections-nav__link sections-nav__link--interior" href="interior.html">
+                <p class="sections-nav__inner sections-nav__inner--interior">
+                  Предметы<br> интерьера
+                </p>
+                <svg class="sections-nav__icon sections-nav__icon--interior" width="40" height="62" viewBox="0 0 40 62" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g opacity="0.5">
+                <path d="M15.162 37.7167C14.8627 38.7119 14.9625 39.9061 15.162 41.2994C15.6607 43.8869 16.8577 47.2705 17.556 50.9527H22.6433C23.3415 47.3701 24.5385 43.9864 25.137 41.2994C25.4363 39.9061 25.4363 38.6124 25.137 37.7167C24.8378 36.821 24.2393 36.1244 23.142 35.4277H17.157C15.96 36.1244 15.3615 36.821 15.162 37.7167Z" fill="#149080"/>
+                <path d="M26.9327 57.6211H13.1671C11.8703 57.6211 10.8728 58.6163 10.8728 59.8105V61.9999H13.1671H26.9327H29.2269V59.8105C29.2269 58.6163 28.2294 57.6211 26.9327 57.6211Z" fill="#149080"/>
+                <path d="M34.015 2.18943H22.3441C22.3441 0.995194 21.3466 0 20.0499 0C18.7531 0 17.7556 0.995194 17.7556 2.18943H6.08478L0 27.5668C0.798005 27.0693 1.59602 26.5717 2.59352 26.5717C3.99003 26.5717 4.78803 27.3678 5.48629 27.9649C6.18454 28.562 6.68329 28.7611 6.88279 28.7611C7.18204 28.7611 7.68079 28.4625 8.37905 27.9649C9.0773 27.4673 9.97505 26.5717 11.2718 26.5717C12.5686 26.5717 13.4663 27.3678 14.1646 27.9649C14.8628 28.4625 15.3616 28.7611 15.6608 28.7611C15.7606 28.7611 15.9601 28.6616 16.2593 28.562C16.4588 28.4625 16.7581 28.164 17.1571 27.9649C17.6559 27.5668 18.2544 26.9697 19.1521 26.7707C19.4514 26.6712 19.7506 26.6712 20.0499 26.6712C21.3466 26.6712 22.2444 27.4673 22.9426 28.0644C23.6409 28.562 24.1397 28.8606 24.4389 28.8606C24.7382 28.8606 25.2369 28.562 25.8354 28.0644C26.5337 27.4673 27.4314 26.6712 28.7282 26.6712C30.1247 26.6712 30.9227 27.4673 31.621 28.0644C31.9202 28.363 32.2194 28.562 32.5187 28.6616C32.7182 28.7611 32.9177 28.8606 33.1172 28.8606C33.4165 28.8606 33.9152 28.562 34.5137 27.9649C35.212 27.3678 36.1097 26.5717 37.4065 26.5717C38.404 26.5717 39.202 27.0693 40 27.5668L34.015 2.18943Z" fill="#149080"/>
+                <path d="M23.4415 53.1426H16.5587C15.8604 53.1426 15.4614 53.6402 15.4614 54.2373C15.4614 54.8344 15.9602 55.332 16.5587 55.332H23.4415C24.1397 55.332 24.5387 54.8344 24.5387 54.2373C24.6385 53.6402 24.1397 53.1426 23.4415 53.1426Z" fill="#149080"/>
+                <path d="M20.0499 28.7598C19.9501 28.7598 19.7506 28.8593 19.4514 28.9588C19.2519 29.0583 19.0524 29.2574 18.8529 29.3569V33.0391H21.1471V29.4564C20.6484 29.0583 20.2494 28.7598 20.0499 28.7598Z" fill="#149080"/>
+                </g>
+                </svg>
               </a>
             </li>
             <li class="sections-nav__item sections-nav__item-right">
-              <a href="toys.html">
-                Детские<br> игрушки
+              <a class="sections-nav__link sections-nav__link--toy" href="toys.html">
+                <p class="sections-nav__inner sections-nav__inner--toy">
+                  Детские<br> игрушки
+                </p>
+                <svg class="sections-nav__icon sections-nav__icon--toy" width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g opacity="0.5">
+                <path d="M0 43.9933L27.4 60V36.5436L0 20.4362V43.9933ZM51.3 12.4832V15C51.3 16.8121 47.8 18.3221 43.6 18.3221C39.3 18.3221 35.9 16.8121 35.9 15V10.8725C36.2 12.5839 39.5 13.9933 43.6 13.9933C47.9 13.9933 51.3 12.4832 51.3 10.6711C51.3 8.85907 47.8 7.349 43.6 7.349C43.3 7.349 42.9 7.349 42.6 7.349L37.6 4.42954V7.55034C37.6 9.36242 34.1 10.8725 29.9 10.8725C27.2 10.8725 24.9 10.2685 23.5 9.36242C23.3 9.16108 23.1 8.95973 22.8 8.75839C22.4 8.3557 22.2 7.95302 22.2 7.55034V4.5302L17.4 7.349C17.1 7.349 16.7 7.349 16.3 7.349C12 7.349 8.60001 8.85907 8.60001 10.6711C8.60001 12.4832 12.1 13.9933 16.3 13.9933C20.4 13.9933 23.7 12.5839 24 10.8725V15C24 16.8121 20.5 18.3221 16.3 18.3221C12 18.3221 8.60001 16.8121 8.60001 15V12.5839L2.60001 16.1074L30.1 32.2148L57.5 16.2081L51.3 12.4832ZM37.7 22.7517C37.7 24.5638 34.2 26.0738 30 26.0738C25.7 26.0738 22.3 24.5638 22.3 22.7517V18.6242C22.6 20.3356 25.9 21.745 30 21.745C34.1 21.745 37.4 20.3356 37.7 18.6242V22.7517ZM32.6 36.745V60L60 43.9933V20.7383L32.6 36.745ZM29.9 6.6443C34.2 6.6443 37.6 5.13423 37.6 3.32215C37.6 1.51007 34.1 0 29.9 0C25.6 0 22.2 1.51007 22.2 3.32215C22.2 5.13423 25.6 6.6443 29.9 6.6443Z" fill="#149080"/>
+                </svg>
               </a>
             </li>
           </ul>
@@ -124,7 +143,15 @@
               </div>
             </dl>
           </div>
+
+          <img class="product__image" src="img/triple-set-mobile-1.jpg" width="260" height="315" alt="Вязаные корзинки">
+
+          <!--TABLET
+          <img class="product__image" src="https://via.placeholder.com/334x404" width="334" height="404" alt="Вязаные корзинки">
+          -->
+          <!--DESKTOP
           <img class="product__image" src="https://via.placeholder.com/525x636" width="525" height="636" alt="Вязаные корзинки">
+          -->
           <p class="product__price">
             Цена: 990 руб.
           </p>
@@ -138,22 +165,22 @@
           </h2>
           <ul class="advantages__list">
             <li class="advantages__item advantages__item--eco">
-              <p class="advantages__description">Экологически чистые материалы</p>
+              <p class="advantages__description">Экологически<br> чистые материалы</p>
             </li>
             <li class="advantages__item advantages__item--price">
-              <p class="advantages__description">Скандинавский стиль по российской цене</p>
+              <p class="advantages__description">Скандинавский стиль<br> по российской цене</p>
             </li>
             <li class="advantages__item advantages__item--likes">
-              <p class="advantages__description">Увеличивает лайки на фотографиях</p>
+              <p class="advantages__description">Увеличивает лайки<br> на фотографиях</p>
             </li>
             <li class="advantages__item advantages__item--love">
-              <p class="advantages__description">Связано вручную с любовью и умилением</p>
+              <p class="advantages__description">Связано вручную<br> с любовью и умилением</p>
             </li>
             <li class="advantages__item advantages__item--patriot">
-              <p class="advantages__description">Поддержка отечественного производителя</p>
+              <p class="advantages__description">Поддержка отечественного<br> производителя</p>
             </li>
             <li class="advantages__item advantages__item--gift">
-              <p class="advantages__description">Поставляется в подарочной упаковке</p>
+              <p class="advantages__description">Поставляется<br> в подарочной упаковке</p>
             </li>
           </ul>
         </div>
@@ -188,8 +215,18 @@
             </blockquote>
           </div>
           <div class="reviews__buttons-container">
-            <button class="reviews__button reviews__button--left" type="button">предыдущий отзыв</button>
-            <button class="reviews__button reviews__button--right" type="button">следующий отзыв</button>
+            <button class="reviews__button reviews__button--left" type="button">
+              <svg width="50" height="26" viewBox="0 0 50 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M50 11H7.7L15.8 2.8L13 0L0 13L13 26L15.8 23.2L7.7 15H50V11Z" fill="black"/>
+              </svg>
+              <span class="visually-hidden">предыдущий отзыв</span>
+            </button>
+            <button class="reviews__button reviews__button--right" type="button">
+              <svg width="50" height="26" viewBox="0 0 50 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M0 11H42.3L34.2 2.8L37 0L50 13L37 26L34.2 23.2L42.3 15H0V11Z" fill="black"/>
+              </svg>
+              <span class="visually-hidden">следующий отзыв</span>
+            </button>
           </div>
           <a class="reviews__button-write button" href="#">
             Написать
@@ -202,7 +239,7 @@
             <h2 class="contacts__title">
               Контакты
             </h2>
-            <div class="contacts__flag">Флаг</div>
+            <div class="contacts__flag"></div>
           </div>
           <address class="contacts__list">
             <div class="contacts__item">
@@ -233,26 +270,52 @@
     </main>
     <footer class="page-footer">
       <div class="page-footer__wrapper container">
-        <img class="page-footer__logo" src="https://via.placeholder.com/102x34" width="102" height="34">
+        <img class="page-footer__logo" src="../img/logo-footer.svg" width="102" height="34">
         <div class="page-footer__social social">
           <b class="social__title visually-hidden">Давайте дружить!</b>
           <ul class="social__list">
             <li class="social__item">
-              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
+                <span class="visually-hidden">Мы в Инстаграме</span>
+              </a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
+                <span class="visually-hidden">Мы в Фейсбуке</span>
+              </a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy_ru">Мы в Твиттер</a>
+              <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy_ru">
+                <span class="visually-hidden">Мы в Твиттер</span>
+              </a>
             </li>
           </ul>
         </div>
         <div class="page-footer__copyright copyright">
           <b class="copyright__text">Разработано:</b>
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <svg width="27" height="35" viewBox="0 0 27 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M13.6 0H13.5L0 1.4V26.1L13.5 34.1L26.9 26.1V1.4L13.6 0ZM25 12.1L13.5 5.3V5.2H13.4L13.3 5.1V5.2L1.9 12.1V3.1L13.4 1.9L25 3.1V12.1ZM13.4 6.8L24.9 13.5L20.4 16.1L13.3 11.9V13.3L19.2 16.8L18.3 17.3L13.3 14.3V15.7L17.1 18L16.3 18.5L13.3 16.7V18.1L15.2 19.2L13.4 20.3L2 13.6L13.4 6.8ZM1.9 15.1L13.3 21.9V22.9L5.4 18.2V19.6L13.4 24.4V25.5L5.4 20.8V22.2L13.4 27L21.5 22.1V16.9L24.9 14.9V24.9L13.4 31.8L1.9 25V15.1Z" fill="#63D1BB"/>
+            </svg>
+          </a>
         </div>
       </div>
     </footer>
+    <script>
+      var navMain = document.querySelector('.main-nav');
+      var navToggle = document.querySelector('.main-nav__toggle');
+
+      navMain.classList.remove('main-nav--nojs');
+
+      navToggle.addEventListener('click', function() {
+        if (navMain.classList.contains('main-nav--closed')) {
+          navMain.classList.remove('main-nav--closed');
+          navMain.classList.add('main-nav--opened');
+        } else {
+          navMain.classList.add('main-nav--closed');
+          navMain.classList.remove('main-nav--opened');
+        }
+      });
+    </script>
   </body>
 </html>
